[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/ClickBox.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.7007
height = 0.683868

[node name="ClickBox" type="Area2D"]
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.62939e-06, -6.62494 )
shape = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_ClickBox_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ClickBox_area_exited"]
[connection signal="input_event" from="." to="." method="_on_ClickBox_input_event"]
